Adds bitcrush.cpp. Not happy with the way it works, will look into trying downsampling to reduce the noise floor raising.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ project(
 
 add_executable(add_delay add_delay.cpp WavFile.cpp)
 add_executable(fill_out fill_out.cpp WavFile.cpp)
+add_executable(bitcrush bitcrush.cpp WavFile.cpp)
