Adds add_reverb.cpp and convolve function in audio_process_lib.cpp. Need to add 2 channel functionality for add_reverb

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ project(
 add_executable(add_delay src/add_delay.cpp src/WavFile.cpp)
 add_executable(fill_out src/fill_out.cpp src/WavFile.cpp)
 add_executable(bitcrush src/bitcrush.cpp src/WavFile.cpp)
+add_executable(add_reverb src/add_reverb.cpp src/WavFile.cpp src/audio_process_lib.cpp)
 add_executable(plot_samples src/plot_samples.cpp src/WavFile.cpp)
 add_executable(plot_spectrum src/plot_spectrum.cpp src/WavFile.cpp)
 
